--- a/package.json
+++ b/package.json
@@ -10,15 +10,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/compat": "^5.3.20",
+    "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
+    "expo-asset": "~8.4.3",
+    "expo-linear-gradient": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "galio-framework": "^0.8.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-modal-dropdown": "^1.0.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/": "react-navigation/stack",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
