--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
     "expo-asset": "~8.4.3",
+    "expo-google-app-auth": "~9.0.0",
     "expo-linear-gradient": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "firebase": "^9.4.1",
     "galio-framework": "^0.8.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
