--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
         "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.dirideal.amine"
+      "package": "com.dirideal.amine",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
