--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-asset": "~8.4.3",
     "expo-google-app-auth": "~9.0.0",
     "expo-linear-gradient": "~10.0.3",
+    "expo-linking": "~2.4.2",
     "expo-status-bar": "~1.1.0",
     "firebase": "^9.4.1",
     "galio-framework": "^0.8.0",
